# efl-research

OLD/emm/: Makefile.am  configure.in  emm.pc.in
codelang/: AUTHORS  Array.c  Array.h  Code.h  IDEAS  Makefile.am  README  String.c  build.sh  clist.c  clist.h  codelang.pc.in  configure.in  main.c  memory_allocator.c  memory_allocator.h  objects_list.h  tests.c
codelang/src/lib/: Codelang.h  Makefile.am  access.c  access.h  class.c  class.h  code.h  codelang.l  codelang.y  hash.c  hash.h  list.c  list.h  member.c  member.h  memory_allocator.h  method.c  method.h  parser.c  parser.h  type.c  type.h  var.c  var.h  variable.c  variable.h
codelang/src/test/: Makefile  Makefile.in  gc.c  hello.cl
efl-sharp/libs/efl-sharp/: configure.in
eina/src/lib/: Edata.h  Eina.h  Makefile.am  canvas.c  eina_array.c  eina_error.c  eina_file.c  eina_hash.c  eina_hash.h  eina_lalloc.h  eina_list.c  eina_mempool.c  eina_module.c  eina_mp.c  eina_private.h  eina_rectangle.h  eina_sheap.c  eina_tree.c  eina_types.h  eina_value.c  list.c  object.c  rectangle.h
eirc/: AUTHORS  Makefile.am  README  configure.in  eirc.pc.in  eirc_test.c
eirc/src/lib/: Eirc.h  Makefile.am  colors.c  dcc.c  eirc.c  errors.c  libirc_dcc.h  libirc_errors.h  libirc_events.h  libirc_options.h  libirc_params.h  libirc_portable.h  libirc_session.h  libirc_sockets.h  libirc_utils.h  libircclient.c  libircclient.h  portable.c  sockets.c  utils.c
ekeko/examples/: Makefile  Makefile.am  canvas.c  ekeko_test.c  ekeko_test.h  filter.c  object.c  rectangle.c  subcanvas.c
ekeko/src/include/: Ekeko.h  Makefile.am  ekeko_attribute.h  ekeko_canvas.h  ekeko_class.h  ekeko_document.h  ekeko_element.h  ekeko_event.h  ekeko_input.h  ekeko_main.h  ekeko_node.h  ekeko_node_list.h  ekeko_object.h  ekeko_private.h  ekeko_property.h  ekeko_renderable.h  ekeko_tiler.h  ekeko_type.h  ekeko_value.h
ekeko/src/lib/: Ekeko.h  Makefile.am  canvas.c  ekeko_attribute.c  ekeko_canvas.c  ekeko_canvas.h  ekeko_core.c  ekeko_document.c  ekeko_element.c  ekeko_event.c  ekeko_input.c  ekeko_main.c  ekeko_node.c  ekeko_node_list.c  ekeko_node_named_map.c  ekeko_object.c  ekeko_object.h  ekeko_private.h  ekeko_property.c  ekeko_renderable.c  ekeko_signal.c  ekeko_tiler.c  ekeko_tiler.h  ekeko_type.c  ekeko_value.c  private.h
emage/: Doxyfile  Makefile.am  configure.ac  configure.in  emage.pc.in  gendoc
emage/src/: Makefile.am  Makefile.in
emage/src/include/: Emage.h  emage_private.h
emage/src/lib/: Emage.h  Makefile.am  color.c  compositor.c  compositor.h  config.h  context.c  context.h  converter.c  converter.h  cpu.c  cpu.h  data.h  debug.h  emage.c  emage_blend.c  emage_blit.c  emage_context.c  emage_cpu.c  emage_deprecated_private.h  emage_main.c  emage_private.h  geometry.h  main.c  scaler.c  scaler.h  scanline.c  scanline.h  surface.c  surface.h
emage/src/modules/: Makefile.am  emage_jpg.c  emage_png.c
emm/src/lib/: Emm.h  Makefile.am  emm_private.h
enesim/: Doxyfile  Makefile.am  TODO  configure.in  gendoc  genperf
enesim/examples/: Makefile.am  enesim_bench.c  enesim_test.c  enesim_test.h  image.c  png.c  surface.c
enesim/m4/: enesim_format.m4
enesim/src/: Makefile.am
enesim/src/include/: Enesim.h  Makefile.am  enesim_common.h  enesim_converter.h  enesim_core.h  enesim_drawer.h  enesim_main.h  enesim_private.h  enesim_rasterizer.h  enesim_rectangle.h  enesim_renderer.h  enesim_surface.h  enesim_transformer.h  enesim_vector.h  extender_int.h  surface.h  surface_argb8888.h
enesim/src/lib/: Enesim.h  Etc.h  Makefile.am  enesim_converter.c  enesim_core.c  enesim_drawer.c  enesim_image.c  enesim_main.c  enesim_private.h  enesim_rasterizer.c  enesim_renderer.c  enesim_surface.c  enesim_transformer.c
enesim/src/tool/: Makefile.am  enesim_generator.h  enesim_generator_core.c  enesim_generator_drawer.c
enginy/src/lib/: Enginy.h  Equis.h  Makefile.am  equis_private.h  path.h
eobj/: Doxyfile  Makefile.am  eobj.pc.in
eobj/src/include/: Eobj.h  Makefile.am  eobj_class.h  eobj_object.h  eobj_object_property.h  eobj_private.h  eobj_signal.h  eobj_signal_callback.h  eobj_types.h
eobj/src/lib/: Makefile.am  eobj_class.c  eobj_marshallers.c  eobj_object.c  eobj_property.c  eobj_signal.c  eobj_signal_callback.c
equis/: Doxyfile  Makefile.am  README  configure.in  equis.pc.in  gendoc
equis/data/: test1.csv
equis/src/lib/: Equis.h  Makefile.am  component.h  data.h  equis_private.h  generator.h  path.c  path.h
esvg/: Makefile.am  README  configure.in  esvg.pc.in
esvg/examples/: Makefile.am  esvg_test.c
esvg/src/include/: ESVG.h  Makefile.am  esvg_canvas.h  esvg_class.h  esvg_common.h  esvg_container.h  esvg_core.h  esvg_element.h  esvg_engine.h  esvg_group.h  esvg_parser.h  esvg_private.h  esvg_rect.h  esvg_shape.h  esvg_svg.h
esvg/src/lib/: ESVG.h  Makefile.am  document.c  esvg_common.h  esvg_draw_private.h  esvg_private.h  group.c  main.c  polygon.c  rect.c  shape.c
etk2/: Makefile.am  README  TODO  configure.ac  etk2.pc.in
etk2/data/suite/: animation01.xml  animation02.xml  animation03.xml  core01.xml  filter01.xml  image01.xml  image02.xml  shape01.xml  shape02.xml  subcanvas01.xml
etk2/src/: Makefile.am
etk2/src/engines/: Makefile.am
etk2/src/include/: Eon.h  Etk2.h  Makefile.am  eon_button.h  eon_circle.h  eon_document.h  eon_engine.h  eon_external.h  eon_fe_displace.h  eon_filter.h  eon_filter_effect.h  eon_image.h  eon_paint.h  eon_private.h  eon_rect.h  eon_shape.h  etk2_anim_basic.h  etk2_anim_matrix.h  etk2_animation.h  etk2_button.h  etk2_canvas.h  etk2_color.h  etk2_container.h  etk2_coord.h  etk2_document.h  etk2_event.h  etk2_fe_displace.h  etk2_filter_effect.h  etk2_image.h  etk2_input.h  etk2_label.h  etk2_object.h  etk2_private.h  etk2_property.h  etk2_rect.h  etk2_renderable.h  etk2_shape.h  etk2_square.h  etk2_type.h  etk2_types.h  (+2 more)
etk2/src/lib/: Etk2.h  Makefile.am  eon_anim_matrix.c  eon_animation.c  eon_canvas.c  eon_circle.c  (+50 more)
evg/: Makefile.am  configure.in  evg.pc.in
libuio/: .project  Doxyfile  Makefile.am  configure.ac  configure.in  libuio.pc.in
libuio/src/: Makefile.am
(+738 files in other folders)
