## Process this file with automake to produce Makefile.in

SUBDIRS = src

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.h.in \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp \
eobj.pc \
eobj_docs.tar.gz

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
eobj.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = eobj.pc
