## Process this file with automake to produce Makefile.in

SUBDIRS = src data 

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.h.in \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp \
equis.pc 

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
equis.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = equis.pc
ACLOCAL_AMFLAGS = -I m4
